# Translate

./: LICENSE  README.md
Backend/: Dockerfile  localhost+2-key.pem  localhost+2.pem  pyproject.toml
Backend/backend/: config.py  main.py
Backend/backend/api/routes/: api.py  translation.py
Backend/backend/models/: api.py
Backend/backend/services/: translation.py
Backend/tests/: test_backend.py
Frontend/: .dockerignore  Dockerfile  angular.json  docker-compose.yml  package-lock.json  package.json
Frontend/src/: styles.scss
Frontend/src/app/: ILanguageTranslation.ts  MyErrorStateMatcher.ts  api.service.ts  app-routing.module.ts  app.module.ts
Frontend/src/app/translate/: TranslationResponse.ts  translate.component.html  translate.component.ts
Frontend/src/environments/: environment.prod.ts  environment.ts
